--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -12,7 +12,14 @@
 	}
 
 .log-in {
-	padding:10px 0;
+	padding: 0;
+    display: flex;
+    height: 100vh;
+	.login-div{
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		height: 100%;
 		.log-in-inner {
 			padding: 70px 60px 0 60px;
 				h3 {
@@ -23,9 +30,16 @@
 						.form-group {
 							position: relative;
 							.form-control {
-							    background-color: #EEF1F5;
-							    border: none;
-							    border-radius: 10px;
+								background-color: #EEF1F5;
+								border: 1px solid #ddd;
+								border-radius: 4px;
+								margin: 0;
+								padding: 0;
+								height: calc(1.5em + 0.75rem + 2px);
+								input{
+									background-color: #EEF1F5;
+									border: 0;
+								}
 							    &:focus {
 							    	box-shadow: none;
 							    	border:1px solid #2F3044!important;
@@ -56,7 +70,17 @@
 						}
 				}
 		}
-
+		.sign-up-button {
+			margin: 10px 0 0;
+			padding: 0px 60px 0 60px;
+				button {
+		    		margin: 0 20px 0 0;
+				}
+				.dropdown{
+				 padding:6px 12px;
+				}
+		}
+	}
 		.conEmail {
 			padding: 70px 60px 0 60px;
 		    text-align: center;
@@ -71,12 +95,7 @@
 		    		margin: 40px 0 0;
 		    	}
 		}
-		.sign-up-button {
-			margin: 40px 0 0;
-				button {
-		    		margin: 0 20px 0 0;
-		    	}
-		}
+
 		.log-in-img {
 			position: relative;
 				.log-in-img-overlay {
@@ -98,29 +117,33 @@
 		}
 }
 
-
 .therapistPro {
-	background-color: #3699FF;
-	padding:20px 0;
+	padding:0;
 		.therapistProInner {
 			.nav {
-				.nav-item {
-					padding:0 20px;
-					@media(max-width:767px) {
-					    padding:0;
-					}
-					.nav-link {
-					    color: #fff;
-					    @media(max-width:767px) {
-					        font-size: 13px;
-							padding: 10px 15px;
-						}
-					    &.active {
-					    	background-color: #F3F6F9;
-					    	color: #3699FF;
-					    }
+				.secondary{
+					background-color: #3699FF;
+					padding: 20px 0;
+					margin: 0;
+				.item {
+					font-size: 13px;
+					padding: 10px 15px;
+					color:#fff;
+					&.active {
+						background-color: #F3F6F9;
+						color: #3699FF;
 					}
 				}
+			  } 
+			  .segment{
+				  border:0px solid;
+				  box-shadow:none;  
+				  margin: 0;
+				  padding: 0;
+			  }
+			  > div{
+				 width:100%;
+			  }
 			}
 		}
 }
@@ -215,7 +238,8 @@
 				.scheduledServices {
 					table {
 						border-collapse:separate; 
-  						border-spacing: 0 20px;
+						  border-spacing: 0 20px;
+						  border: 0;
 							thead {
 								background: #F3F6F9;
 						    	color: #2F3044;
@@ -605,6 +629,20 @@
 
 	}
 
+}
+
+/*--modal css*/
+.custom-modal{
+	.modal-dialog{
+	.modal-content{
+		  .modal-body{
+			.confirmation {
+				padding: 20px 0 40px;
+				font-size: 20px;
+			}
+		  } 
+		}
+	}
 }
 
 .custom-modal {
